# moe-amy-tts

./: .flatpakref  .gitignore  README.md  amy.desktop  dev.sh  install.sh  justfile  moe.amy.tts.desktop  moe.amy.tts.metainfo.xml  moe.amy.tts.yml  run.sh  test.sh  tts  yad.sh
gui/: amy_installer.desktop  amy_tts_installer.desktop  user_install_script.sh
python/: base_piper.py  gui.py  gui.py.bakup  ivona.py  justfile  moe.amy.tts.desktop  moe.amy.tts.yml  pipe  pypi-dependencies.json  pypi-output.json  pypi2-output.json  pypix-dependencies.json  req.txt  requirements.txt  textfile  vvv.py
python/moe_amy/: flatpak-poetry-gen  pyproject.toml  requirements.txt
repo/: summary  summary.idx  summary.sig
repo/refs/heads/app/org.alaska.piper/x86_64/: master
repo/summaries/: 121463d44551589c434755326d846be6db088e70dab48c10ed685b2f93d57b8c-d9f9ffa50d542fbe4dbf365def9f93c0ff150b3e8fcce10b460d9baa23f6df83.delta  380acdef036febebc204fe532b93798b41f80363223e080cc6da4e22b6924c44-d9f9ffa50d542fbe4dbf365def9f93c0ff150b3e8fcce10b460d9baa23f6df83.delta
